# ceph-doctor

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  mise.toml
.github/workflows/: release.yml  tests.yml
src/: lib.rs  main.rs  monitor.rs
src/monitor/: mod.rs  state.rs  terminal.rs
src/monitor/data/: calculator.rs  formatter.rs  mod.rs
src/monitor/ui/: error.rs  footer.rs  header.rs  mod.rs  osd_table.rs  pg_table.rs  recovery.rs
