[package]
name = "ceph-doctor"
version = "0.0.1"
edition = "2021"
default-run = "ceph-doctor"

[lints.clippy]
uninlined_format_args = "deny"
needless_borrows_for_generic_args = "deny"
manual_clamp = "deny"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde"] }